tests/sksl/errors/MatrixIndexOutOfRange.glsl
### Compilation failed:

error: 1: index -1 out of range for 'half2x4'
error: 4: index 2 out of range for 'half2x4'
error: 5: index 3 out of range for 'half2x4'
error: 6: index 4 out of range for 'half2x4'
error: 7: index 1000000000 out of range for 'half2x4'
error: 9: index -1 out of range for 'half3x3'
error: 13: index 3 out of range for 'half3x3'
error: 14: index 4 out of range for 'half3x3'
error: 15: index 1000000000 out of range for 'half3x3'
error: 17: index -1 out of range for 'half4x2'
error: 22: index 4 out of range for 'half4x2'
error: 23: index 1000000000 out of range for 'half4x2'
error: 25: index -1 out of range for 'half3x3'
error: 29: index 3 out of range for 'half3x3'
error: 30: index 4 out of range for 'half3x3'
error: 31: index 1000000000 out of range for 'half3x3'
16 errors
